# cookiecutter-compbio

./: README.md  cookiecutter.json  post_gen_project.py
hooks/: post_gen_project.py
template/: cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  environment.yml
{{cookiecutter.project_slug}}/experiments/: README.md  log_book.md
{{cookiecutter.project_slug}}/experiments/experiments_template/: cookiecutter.json
{{cookiecutter.project_slug}}/experiments/template/: cookiecutter.json  notebook_example.ipynb
{{cookiecutter.project_slug}}/experiments/template/hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/src/: pyproject.toml
{{cookiecutter.project_slug}}/src/{{ cookiecutter.module_name }}/: __init__.py  directories.py  pyproject.toml  setup.py
