[project]
name = "{{ cookiecutter.module_name }}"
version = "0.0.1"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"

[info]
authors = ["{{ cookiecutter.full_name }}"]
license = "{{ cookiecutter.open_source_license }}"
github_username = "{{ cookiecutter.github_username }}"
shared_data_directory = "{{ cookiecutter.shared_data_directory }}"
manuscript_format = "{{ cookiecutter.manuscript_format }}"
